[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragaudit"
version = "0.1.0"
description = "RAG Knowledge Base Poisoning Detector - scans documents before embedding into RAG systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kris Kimmerle", email = "kris@kimmerle.com"}
]
keywords = [
    "security",
    "rag",
    "poisoning",
    "llm",
    "knowledge-base",
    "static-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/kriskimmerle/ragaudit"
Repository = "https://github.com/kriskimmerle/ragaudit"
Issues = "https://github.com/kriskimmerle/ragaudit/issues"

[project.scripts]
ragaudit = "ragaudit:main"

[tool.setuptools]
py-modules = ["ragaudit"]
